--- a/styles.css
+++ b/styles.css
@@ -8,15 +8,15 @@ h1{
 }
 .about{
     color:#4B756A;
-    font-family:Impact;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 }
 .skills{
     color:#6073C7;
-    font-family:Helvetica;
+    font-family:Arial, Helvetica, sans-serif;
 }
 .projects{
     color:#313D73;
-    font-family:Arial;
+    font-family:Georgia, 'Times New Roman', Times, serif;
 }
 .contact{
     color:#704B75;
