--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,15 @@ h1{
     color:#6073C7;
     font-family:Arial, Helvetica, sans-serif;
 }
-.projects{
-    color:#313D73;
-    font-family:Georgia, 'Times New Roman', Times, serif;
+.projects { 
+    display:flex; flex-wrap:wrap; 
+} 
+.project {
+width: 30%;
+margin: 10px;
+padding: 20px 10px;
+background: white; /* pick a color */
+border-radius: 25%;
 }
 .contact{
     color:#704B75;
